<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Cross Launcher</string>
    <string name="app_desc">A launcher simulating Sony XrossMediaBar Experiences in PlayStation 3 and PlayStation Portable on Android</string>
    <string name="locale_lang_display_name">English (Default)</string>
    <string name="orient_unknown">Unknown Orientation</string>
    <string name="orient_landscape">Landscape</string>
    <string name="orient_portrait">Portrait</string>
    <string name="orient_user">System Default</string>
    <string name="item_orientation">Screen Orientation</string>
    <string name="first_run_instruction_title">First Run</string>
    <string name="first_run_instruction_content">
    Since this is your first run, this is how you can interact with this launcher
    \n
    \n Touch :
    \n- Executing Item : Tap the icon of the item
    \n- Changing between Categories : Swipe left or right
    \n- Changing between Items : Swipe up or down
    \n- Show / Hide Item Options : Two-fingers tap anywhere
    \n- Re-reveal the Menu : Tap anywhere on screen
    \n
    \n Keyboard / TV Remote :
    \n- Executing Item : Enter / OK Button
    \n- Changing between Categories : Arrow Left and Right
    \n- Changing between Items : Arrow Up and Down
    \n- Show / Hide Item Options : Tab Button / Menu Button (Right side of Spacebar)
    \n- Re-reveal the Menu : Enter
    \n- Jump to item by first letter : Any alphanumeric key
    \n
    \n PlayStation Controller:
    \n- Executing Item : Cross / Circle Button (Depending on setting)
    \n- Changing between Categories : D-Pad Left and Right
    \n- Changing between Items : D-Pad Up and Down
    \n- Show / Hide Item Options : Triangle Button
    \n- Re-reveal the Menu : Start
    \n
    \n Xbox Controller:
    \n- Executing Item : A / B Button (Depending on setting)
    \n- Changing between Categories : D-Pad Left and Right
    \n- Changing between Items : D-Pad Up and Down
    \n- Show / Hide Item Options : Y Button
    \n- Re-reveal the Menu : Menu
    \n
    \n If "Mimic Non-Asian Console" option is active, PlayStation and Xbox Controller
    \n will use Cross / A Button to as confirm, otherwise it will use Circle / B Button
  </string>
    <string name="storage_permission_not_granted">Storage permission is not granted, players may not usable</string>
    <string name="setting_show_gameboot_name">Enable Gameboot</string>
    <string name="setting_mimic_dynamic_theme">Show Dynamic Theme Twinkles</string>
    <string name="setting_gameboot_custom_guide">Brand Logo customization guide</string>
    <string name="setting_coldboot_custom_guide">Launcher Startup Logo customization guide</string>
    <string name="click_here">Click here</string>
    <string name="app_not_installed">App is not installed</string>
    <string name="audioplayer_pause">Pause</string>
    <string name="audioplayer_resume">Resume</string>
    <string name="audioplayer_stop">Stop</string>
    <string name="unknown"><![CDATA[<Unknown>]]></string>
    <string name="category_home">Home</string>
    <string name="category_apps">Apps</string>
    <string name="category_games">Games</string>
    <string name="category_videos">Videos</string>
    <string name="category_music">Music</string>
    <string name="category_settings">Settings</string>
    <string name="videoplayer_pause">Pause</string>
    <string name="videoplayer_stop">Stop</string>
    <string name="videoplayer_play">Play</string>
    <string name="videoplayer_bwd">Backward</string>
    <string name="videoplayer_fwd">Forward</string>
    <string name="videoplayer_switchar">Zoom</string>
    <string name="videoplayer_viewsetting">Display Setting</string>
    <string name="videoplayer_volume">Volume</string>
    <string name="videoplayer_switchdisplay">Display</string>
    <string name="videoplayer_delete">Delete</string>
    <string name="videoplayer_setthumbnail">Set as Preview Start</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="menu_rebuild_db">Rebuild App and Game Database</string>
    <string name="common_click_here">Click here</string>
    <string name="menu_rebuild_db_desc">If new item is not added automatically.</string>
    <string name="common_corrupted">Corrupted data</string>
    <string name="audio_corrupted">Audio data is corrupted</string>
    <string name="app_hide_menu">Hide Menu</string>
    <string name="app_hide_menu_desc">Tap anywhere to reveal menu once it\'s hidden</string>
    <string name="xmb_wave_livewp_desc">XMB Wave Live Wallpaper</string>
    <string name="xmb_icon_desc_root">This icon shouldn\'t be visible</string>
    <string name="unknown_symbols" translatable="false">\???</string>
    <string name="app_name_wave">Wave Wallpaper</string>
    <string name="app_launch">Launch</string>
    <string name="app_find_on_playstore">Find on Play Store</string>
    <string name="view_app_info">Application Details</string>
    <string name="app_show_details">Details</string>
    <string name="common_back">Back</string>
    <string name="app_open_data_dir">Open Data Directory</string>
    <string name="app_open_mod_dir">Open Customization Dir</string>
    <string name="app_open_obb_dir">Open OBB Directory</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="app_info_system_activity">Open in Settings</string>
    <string name="title_activity_wave_wallpaper_setting">Wave Wallpaper Settings</string>
    <string name="waveset_category_behavior">Wave Behaviour</string>
    <string name="waveset_category_color">Wave Colors</string>
    <string name="waveset_behavior_style">Wave Style</string>
    <string name="waveset_behavior_speed">Wave Speed</string>
    <string name="waveset_color_back_top">Background Top</string>
    <string name="waveset_color_back_bottom">Background Bottom</string>
    <string name="waveset_color_fore_top">Wave Edge</string>
    <string name="waveset_color_fore_bottom">Wave Center</string>
    <string name="plugin_name_musiclist">Music List (Internal)</string>
    <string name="plugin_desc_musiclist">Lists all music in device via Android MediaStore</string>
    <string name="error_common_header">Error</string>
    <string name="error_category_launch">No … You shouldn\'t launch this item</string>
    <string name="nettype_ethernet">Ethernet</string>
    <string name="nettype_no_connection">No Internet</string>
    <string name="nettype_wifi">Wi-Fi</string>
    <string name="category_is_empty">Category empty</string>
    <string name="settings_category_display_desc">Adjust settings for rendering system</string>
    <string name="app_refresh_due_to_uninstall">App uninstalled, refreshing app list…</string>
    <string name="error_no_appmarket_title">Umm… Play Store?</string>
    <string name="error_no_appmarket_description">Cannot find \"market:\" URL handler, Do your device have any App Market installed? e.g Google Play Store</string>
    <string name="bre_name">Broadcast Receiver</string>
    <string name="perm_install_shortcut_label">Install Shortcut</string>
    <string name="sdk_widget_shortcut_not_supported">Shortcut is only supported from Android O and later</string>
    <string name="default_dialog_title">Dialog</string>
    <string name="setting_display_layout_type">XMB Layout</string>
    <string name="setting_display_layout_type_desc">Which console should the launcher mimics</string>
    <string name="settings_category_debug_name" translatable="false">★ Debug Settings</string>
    <string name="setting_systeminfo_name">Information</string>
    <string name="setting_systeminfo_desc">"Show additional informations "</string>
    <string name="settings_category_debug_desc" translatable="false">" "</string>
    <string name="string_systeminfo_androidver_name">Android Version</string>
    <string name="empty_string" translatable="false">" "</string>
    <string name="settings_category_system_name">System Settings</string>
    <string name="settings_category_system_desc">Adjust launcher settings</string>
    <string name="settings_display_show_operator_name">Show Network Name</string>
    <string name="settings_display_show_operator_desc">Show currently connected network name, it can be Ethernet, Wi-Fi or Mobile Data</string>
    <string name="settings_display_clock_second_analog_name">Second on Analog Clock</string>
    <string name="settings_display_clock_second_analog_desc">Show the hand for second to on the analog clock</string>
    <string name="string_systeminfo_androidmdl_name">Device Model</string>
    <string name="settings_system_show_fps_name">Show FPS</string>
    <string name="settings_system_show_fps_desc">Show rendering performance of the launcher</string>
    <string name="app_create_customization_folder">Create Customization Dir</string>
    <string name="app_customization_file_created">Customization Directory Created</string>
    <string name="app_sorting_name">By Name</string>
    <string name="app_sorting_updtime">By Update Time</string>
    <string name="app_sorting_filesize">By APK File Size</string>
    <string name="app_sorting_actname">By Package Name</string>
    <string name="app_category_switch_sort">Switch Sort</string>
    <string name="screen_portrait_warning_desc">Portrait screen may cause bad rendering performance on lower device and high RAM usage due to more icon is visible on-screen at the same time. In case it happens, you can enforce the launcher orientation to landscape.</string>
    <string name="no_hwaccel_warning_title">No Hardware Acceleration</string>
    <string name="settings_system_language">Launcher Display Language</string>
    <string name="settings_system_language_description">Display language of the Launcher</string>
    <string name="photoepilepsy_warning">
        PHOTOSENSITIVE EPILEPSY
        \nIF YOU HAVE A HISTORY OF EPILEPSY OR SEIZURES, CONSULT A DOCTOR BEFORE USE, CERTAIN PATTERN MAY TRIGGER SEIZURES WITH NO PRIOR HISTORY, BEFORE USING THIS LAUNCHER, CAREFULLY READ THE INSTRUCTION MANUAL HOSTED AT GITHUB.
        \n
        \nTHIS APP IS NOT AN EMULATOR!
        \nTHIS APP IS PURELY A LAUNCHER THAT SIMULATES A PS3/PSP HOME MENU EXPERIENCES, NOT A PS3/PSP EMULATOR. IN CASE YOU DOWNLOAD THIS APP THINKING THIS AS AN EMULATOR YOU ARE FREE TO UNINSTALL IT.
        \n
        \nTHIS WARNING CAN BE DISABLED FROM SYSTEM MENU
    </string>
    <string name="settings_system_hide_boot_warning">Hide Photosensitive Warning</string>
    <string name="settings_system_asian_console_name">Circle Button Behaviour</string>
    <string name="settings_system_asian_console_desc">What the Circle Button (B on Xbox, A on Nintendo) do on system</string>
    <string name="settings_system_asian_console_true">Confirm</string>
    <string name="settings_system_asian_console_false">Cancel</string>
    <string name="font_load_failed">An error occurred during custom font loading : %s</string>
    <string name="settings_category_display_name">Display Settings</string>
    <string name="perm_install_shortcut_desc">Install static shortcuts to Cross Launcher</string>
    <string name="screen_portrait_warning_title">Screen is in Portrait Orientation</string>
    <string name="no_hwaccel_warning_desc">View is not hardware accelerated, rendering performance might be slower. On some device, you can enforce HW acceleration via Developer Option, either for a specific app or system-wide.</string>
    <string name="setting_android_name">Android System Settings</string>
    <string name="setting_android_desc">Shortcuts to Android Settings</string>
    <string name="android_sys_network_name"><![CDATA[Network & Internet]]></string>
    <string name="android_sys_network_desc">Wi-Fi, mobile, data usage, and hotspot</string>
    <string name="android_sys_devices_name">Connected devices</string>
    <string name="android_sys_devices_desc">Bluetooth, USB</string>
</resources>